--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,26 +24,26 @@
 }
 
 .button-1 {
-    background-color: green;
+    background-color: darkgreen;
     border-radius: 100% 0 0 0;
     right: 50%;
 }
 
 .button-2 {
-    background-color: red;
+    background-color: darkred;
     border-radius: 0 100% 0 0;
     left: 50%;
 }
 
 .button-3 {
-    background-color: blue;
+    background-color: darkblue;
     top: 25%;
     border-radius: 0 0 0 100% ;
 
 }
 
 .button-4 {
-    background-color: yellow;
+    background-color: #CCCC00;
     top: 25%;
     border-radius: 0 0 100% 0;
 }
